# agent-safety-eval-lab

./: CITATION.cff  README.md  pyproject.toml
configs/: eval_suite.json  experiment.yaml  experiment_matrix.yaml
data/processed/: classification_examples.jsonl
datasets/: agent_trace_eval_cases.json  full_trace_suite.json  mock_agent_cases.json
docs/: adapter_contract.md  architecture.md  research_brief.md  top_tier_reviewer_packet.md
evals/: tool_policy.json
examples/: analyze_beavertails_sample.py  check_suite_coverage.py  run_mock_eval.py  run_trace_analytics.py  write_report.py
examples/traces/: egress_attempt.json  public_summary.json
notebooks/: maturity_walkthrough.ipynb
reports/: agent_safety_gpu_benchmark.md  agent_safety_v2_research_report.md  agent_trace_eval_results.csv  agent_trace_eval_results.json  demo_report.md  demo_results.json  experiment_analysis.md  full_trace_suite_analysis.md  full_trace_suite_results.csv  maturity_review.md  mini_report.md  real_beavertails_analysis.json  real_beavertails_analysis.md  replay_results.json  suite_coverage.json  trace_analytics.json  trace_analytics_report.md
reports/results/: artifact_manifest.json  claim_evidence_matrix.csv  experiment_index.json  gpu_classification_metrics.json  gpu_tfidf_mlp_prompt_response_training_curve.csv  gpu_training_curve.csv  reproducibility_manifest.json  top_tier_quality_gate.json  v2_ablation_results.csv  v2_main_results.csv  (+2 more)
tests/: test_analytics.py  test_coverage.py  test_maturity_assets.py  test_real_dataset_sample.py  test_replay.py  test_report.py  test_smoke.py
(+15 files in other folders)
